@@ -112,6 +112,11 @@ abstract class tx_oelib_Model extends tx_oelib_Object {
 	 * Frees as much memory that has been used by this object as possible.
 	 */
 	public function __destruct() {
+		// avoids infinite loops for two models in a circle
+		if ($this->isDead()) {
+			return;
+		}
+
 		$this->markAsDead();
 
 		foreach ($this->data as $key => $item) {
@@ -120,7 +125,9 @@ abstract class tx_oelib_Model extends tx_oelib_Object {
 			} elseif ($item instanceof tx_oelib_Model) {
 				// Models without UIDs are not registered at a mapper and thus
 				// will not be destructed by the mapper.
-				if (!$item->hasUid()) {
+				// Still, we need to avoid infinite loops if this model has a
+				// relation to itself.
+				if (!$item->hasUid() && ($item !== $this)) {
 					$item->__destruct();
 				}
 			}
